--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -1,12 +1,48 @@
 /* Universal selector */
-/* * {
-  border-top: 10px solid red;
-  color: red;
-} */
+* {
+  margin: 0;
+  padding: 0;
+}
 
 body {
   color: #444;
   font-family: sans-serif;
+}
+
+.container {
+  width: 800px;
+  /* margin-left: auto;
+  margin-right: auto; */
+  margin: 0 auto;
+}
+
+.main-header {
+  background-color: #e2e2e2;
+  padding: 20px 40px;
+  /* padding-left: 40px;
+  padding-right: 40px; */
+  margin-bottom: 60px;
+  height: 80px;
+}
+
+nav {
+  font-size: 18px;
+}
+
+article {
+  margin-bottom: 60px;
+}
+
+.post-header {
+  margin-bottom: 40px;
+}
+
+aside {
+  background-color: #e2e2e2;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+  padding: 50px 0;
+  width: 500px;
 }
 
 h1,
@@ -23,10 +59,13 @@ h1 {
 
 h2 {
   font-size: 40px;
+  margin-bottom: 30px;
 }
 
 h3 {
   font-size: 30px;
+  margin-bottom: 20px;
+  margin-top: 40px;
 }
 
 h4 {
@@ -38,10 +77,22 @@ h4 {
 p {
   font-size: 22px;
   line-height: 1.5;
+  margin-bottom: 15px;
+}
+
+ul,
+ol {
+  margin-left: 50px;
+  margin-bottom: 20px;
 }
 
 li {
   font-size: 20px;
+  margin-bottom: 10px;
+}
+
+li:last-child {
+  margin-bottom: 0;
 }
 
 /* footer p {
@@ -68,16 +119,6 @@ li {
 
 .related {
   list-style: none;
-}
-
-.main-header {
-  background-color: #e2e2e2;
-}
-
-aside {
-  background-color: #e2e2e2;
-  border-top: 5px solid #1098ad;
-  border-bottom: 5px solid #1098ad;
 }
 
 /* .first-li {
@@ -122,6 +163,11 @@ a:active {
   font-style: italic;
 }
 
+.post-img {
+  width: 100%;
+  height: auto;
+}
+
 /* resolving conflicts */
 /* #copyright {
   color: red;
@@ -138,7 +184,3 @@ a:active {
 footer p {
   color: green !important;
 } */
-
-nav {
-  font-size: 18px;
-}
