--- a/starter/03-CSS-Fundamentals/product-styles.css
+++ b/starter/03-CSS-Fundamentals/product-styles.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: sans-serif;
   line-height: 1.4;
@@ -6,6 +11,8 @@ body {
 /* PRODUCT */
 .product {
   border: 4px solid #000000;
+  width: 825px;
+  margin: 50px auto;
 }
 
 .product-title {
@@ -13,6 +20,7 @@ body {
   font-size: 22px;
   text-transform: uppercase;
   background-color: #f7f7f7f7;
+  padding: 15px;
 }
 
 /* PRODUCT INFORMATION */
@@ -25,6 +33,11 @@ body {
   text-transform: uppercase;
   font-weight: bold;
   color: #777;
+  margin-bottom: 20px;
+}
+
+.description {
+  margin-bottom: 10px;
 }
 
 .more-info:link,
@@ -41,20 +54,29 @@ body {
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
+  margin-top: 30px;
+  margin-bottom: 15px;
 }
 
 .details-list {
   list-style: square;
+  margin-left: 20px;
+}
+
+.details-list li {
+  margin-bottom: 10px;
 }
 
 /* BUTTON */
 .add-cart {
   background-color: #000000;
-  border: none;
+  border-top: 4px solid #000000;
   color: #ffffff;
   font-size: 20px;
   text-transform: uppercase;
   cursor: pointer;
+  width: 100%;
+  padding: 15px;
 }
 
 .add-cart:hover {
