--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -4,6 +4,7 @@
   padding: 0;
 }
 
+/* PAGE Sections */
 body {
   color: #444;
   font-family: sans-serif;
@@ -22,7 +23,7 @@ body {
   /* padding-left: 40px;
   padding-right: 40px; */
   margin-bottom: 60px;
-  height: 80px;
+  /* height: 80px; */
 }
 
 nav {
@@ -45,6 +46,7 @@ aside {
   width: 500px;
 }
 
+/* SMALLER Elements */
 h1,
 h2,
 h3 {
@@ -78,6 +80,7 @@ p {
   font-size: 22px;
   line-height: 1.5;
   margin-bottom: 15px;
+  /* display: inline; */
 }
 
 ul,
@@ -89,6 +92,7 @@ ol {
 li {
   font-size: 20px;
   margin-bottom: 10px;
+  /* display: inline; */
 }
 
 li:last-child {
@@ -166,6 +170,20 @@ a:active {
 .post-img {
   width: 100%;
   height: auto;
+}
+
+nav a:link {
+  /* background-color: orangered;
+  margin: 20px;
+  padding: 20px;
+  display: block; */
+  margin-right: 30px;
+  margin-top: 10px;
+  display: inline-block;
+}
+
+nav a:link:last-child {
+  margin-right: 0;
 }
 
 /* resolving conflicts */
