--- a/starter/03-CSS-Fundamentals/product-styles.css
+++ b/starter/03-CSS-Fundamentals/product-styles.css
@@ -13,6 +13,7 @@ body {
   border: 4px solid #000000;
   width: 825px;
   margin: 50px auto;
+  position: relative;
 }
 
 .product-title {
@@ -54,7 +55,7 @@ body {
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
-  margin-top: 30px;
+  margin-top: 20px;
   margin-bottom: 15px;
 }
 
@@ -82,6 +83,55 @@ body {
 .add-cart:hover {
   color: #000000;
   background-color: #ffffff;
+}
+
+.sale-label {
+  color: white;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  background-color: red;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px;
+  position: absolute;
+  top: -14px;
+  left: -30px;
+}
+
+.black-color,
+.blue-color,
+.orange-color,
+.yellow-color,
+.green-color,
+.brown-color {
+  width: 20px;
+  height: 20px;
+  background-color: black;
+  display: inline-block;
+  margin-top: 25px;
+  margin-right: 10px;
+}
+
+.blue-color {
+  background-color: rgb(10, 133, 233);
+}
+
+.orange-color {
+  background-color: rgb(212, 74, 24);
+}
+
+.yellow-color {
+  background-color: rgb(255, 208, 0);
+}
+
+.green-color {
+  background-color: rgb(164, 218, 16);
+}
+
+.brown-color {
+  background-color: rgb(109, 69, 69);
 }
 
 /* ------------My initial solution---------- */
