--- a/starter/03-CSS-Fundamentals/product-styles.css
+++ b/starter/03-CSS-Fundamentals/product-styles.css
@@ -37,6 +37,20 @@ body {
   margin-bottom: 20px;
 }
 
+.sale-label {
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  background-color: rgb(241, 6, 6);
+  display: inline-block;
+  padding: 7px 15px;
+  position: absolute;
+  top: -17px;
+  left: -38px;
+}
+
 .description {
   margin-bottom: 10px;
 }
@@ -44,6 +58,8 @@ body {
 .more-info:link,
 .more-info:visited {
   color: #000000;
+  margin-bottom: 30px;
+  display: inline-block;
 }
 
 .more-info:hover,
@@ -51,11 +67,39 @@ body {
   text-decoration: none;
 }
 
+.color {
+  width: 22px;
+  height: 22px;
+  background-color: black;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.blue-color {
+  background-color: rgb(10, 133, 233);
+}
+
+.orange-color {
+  background-color: rgb(212, 74, 24);
+}
+
+.yellow-color {
+  background-color: rgb(255, 208, 0);
+}
+
+.green-color {
+  background-color: rgb(164, 218, 16);
+}
+
+.brown-color {
+  background-color: rgb(109, 69, 69);
+}
+
 /* PRODUCT DETAILS */
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
-  margin-top: 20px;
+  margin-top: 30px;
   margin-bottom: 15px;
 }
 
@@ -83,55 +127,6 @@ body {
 .add-cart:hover {
   color: #000000;
   background-color: #ffffff;
-}
-
-.sale-label {
-  color: white;
-  text-transform: uppercase;
-  font-size: 12px;
-  font-weight: bold;
-  letter-spacing: 2px;
-  background-color: red;
-  display: inline-block;
-  text-align: center;
-  padding: 5px 10px;
-  position: absolute;
-  top: -14px;
-  left: -30px;
-}
-
-.black-color,
-.blue-color,
-.orange-color,
-.yellow-color,
-.green-color,
-.brown-color {
-  width: 20px;
-  height: 20px;
-  background-color: black;
-  display: inline-block;
-  margin-top: 25px;
-  margin-right: 10px;
-}
-
-.blue-color {
-  background-color: rgb(10, 133, 233);
-}
-
-.orange-color {
-  background-color: rgb(212, 74, 24);
-}
-
-.yellow-color {
-  background-color: rgb(255, 208, 0);
-}
-
-.green-color {
-  background-color: rgb(164, 218, 16);
-}
-
-.brown-color {
-  background-color: rgb(109, 69, 69);
 }
 
 /* ------------My initial solution---------- */
