--- a/starter/04-CSS-Layouts/product-styles.css
+++ b/starter/04-CSS-Layouts/product-styles.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -25,8 +26,21 @@ body {
 }
 
 /* PRODUCT INFORMATION */
+.product-img {
+  float: left;
+  margin-right: 40px;
+}
+
+.description-container {
+  float: left;
+  width: 243px;
+  margin-right: 40px;
+  margin-top: 25px;
+}
+
 .price {
   font-size: 24px;
+  float: left;
 }
 
 .shipping {
@@ -35,6 +49,11 @@ body {
   font-weight: bold;
   color: #777;
   margin-bottom: 20px;
+  float: right;
+}
+
+.description-body {
+  clear: both;
 }
 
 .sale-label {
@@ -96,10 +115,16 @@ body {
 }
 
 /* PRODUCT DETAILS */
+.details-container {
+  float: right;
+  width: 243px;
+  margin-top: 25px;
+}
+
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
-  margin-top: 30px;
+  /* margin-top: 30px; */
   margin-bottom: 15px;
 }
 
