--- a/starter/04-CSS-Layouts/product-styles.css
+++ b/starter/04-CSS-Layouts/product-styles.css
@@ -9,16 +9,7 @@ body {
   line-height: 1.4;
 }
 
-.clearfix::after {
-  /* fixing the collapsed container */
-  content: "";
-  clear: both;
-  display: block;
-}
-
 .container {
-  /* collapsed element - all child elements are floated */
-  /* background-color: yellow; */
   display: flex;
   align-items: center;
   gap: 40px;
@@ -42,26 +33,18 @@ body {
 
 /* PRODUCT INFORMATION */
 .product-img {
-  /* float: left;
-  margin-right: 40px; */
   flex: 1;
 }
 
 .product-info {
-  /* column-width = (825(width)-4-4(borders)-250(image)-40-40(spacing)) / 2 */
-  /* float: left;
-  width: 243px;
-  margin-right: 40px;
-  margin-top: 25px; */
   flex: 1;
 }
 
 .price {
   font-size: 24px;
-  /* float: left; */
 }
 
-.row {
+.product-price {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -73,14 +56,7 @@ body {
   text-transform: uppercase;
   font-weight: bold;
   color: #777;
-  /* margin-bottom: 20px; */
-  /* margin-top: 8px; */
-  /* float: right; */
 }
-
-/* .description-body {
-  clear: both;
-} */
 
 .sale-label {
   color: rgb(255, 255, 255);
@@ -98,7 +74,6 @@ body {
 
 .description {
   margin-bottom: 10px;
-  clear: both;
 }
 
 .more-info:link,
@@ -113,7 +88,7 @@ body {
   text-decoration: none;
 }
 
-.colors {
+.product-colors {
   display: flex;
   gap: 10px;
 }
@@ -122,8 +97,6 @@ body {
   width: 22px;
   height: 22px;
   background-color: black;
-  /* display: inline-block; */
-  /* margin-right: 10px; */
 }
 
 .blue-color {
@@ -148,16 +121,12 @@ body {
 
 /* PRODUCT DETAILS */
 .product-details {
-  /* float: left;
-  width: 243px;
-  margin-top: 25px; */
   flex: 1;
 }
 
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
-  /* margin-top: 30px; */
   margin-bottom: 15px;
 }
 
@@ -186,48 +155,3 @@ body {
   color: #000000;
   background-color: #ffffff;
 }
-
-/* ------------My initial solution---------- */
-/* article {
-  border: 4px solid black;
-  font-family: sans-serif;
-}
-
-h2 {
-  background-color: rgb(226, 226, 226);
-  text-transform: uppercase;
-  text-align: center;
-}
-
-strong {
-  font-size: 23px;
-}
-
-.shipping {
-  text-transform: uppercase;
-  font-size: 12px;
-}
-
-a {
-  color: black;
-}
-
-a:hover {
-  text-decoration: underline transparent;
-}
-
-li {
-  list-style: square;
-}
-
-button {
-  text-transform: uppercase;
-  background-color: black;
-  color: white;
-  border: none;
-}
-
-button:hover {
-  background-color: white;
-  color: black;
-} */
