--- a/starter/04-CSS-Layouts/style.css
+++ b/starter/04-CSS-Layouts/style.css
@@ -27,7 +27,7 @@ body {
   padding-left: 40px;
   padding-right: 40px; */
   padding: 20px 40px;
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
   /* height: 80px; */
 }
 
@@ -37,7 +37,7 @@ nav {
 }
 
 article {
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
 
 .post-header {
@@ -310,6 +310,7 @@ footer {
 }
   */
 
+/* FLEXBOX */
 .main-header {
   display: flex;
   align-items: center;
@@ -349,7 +350,8 @@ footer {
   font-style: italic;
 }
 
-.row {
+/* FLEXBOX LAYOUT */
+/* .row {
   display: flex;
   gap: 75px;
   margin-bottom: 60px;
@@ -362,9 +364,26 @@ article {
 }
 
 aside {
-  /* DEFAULTS
+  DEFAULTS
   flex-grow: 0;
   flex-shrink: 1;
-  flex-basis: auto; */
+  flex-basis: auto;
   flex: 0 0 300px;
+} */
+
+/* CSS GRID LAYOUT */
+.container {
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  column-gap: 75px;
+  row-gap: 60px;
+  align-items: start;
+}
+
+.main-header {
+  grid-column: 1 / -1;
+}
+
+footer {
+  grid-column: 1 / -1;
 }
