--- a/starter/04-CSS-Layouts/product-styles.css
+++ b/starter/04-CSS-Layouts/product-styles.css
@@ -21,6 +21,10 @@ body {
   width: 825px;
   margin: 50px auto;
   position: relative;
+  display: grid;
+  grid-template-columns: 250px 1fr 1fr;
+  column-gap: 30px;
+  align-items: center;
 }
 
 .product-title {
@@ -29,15 +33,16 @@ body {
   text-transform: uppercase;
   background-color: #f7f7f7f7;
   padding: 15px;
+  grid-column: 1 / -1;
 }
 
 /* PRODUCT INFORMATION */
 .product-img {
-  flex: 1;
+  /* flex: 1; */
 }
 
 .product-info {
-  flex: 1;
+  /* flex: 1; */
 }
 
 .price {
@@ -121,7 +126,8 @@ body {
 
 /* PRODUCT DETAILS */
 .product-details {
-  flex: 1;
+  /* flex: 1; */
+  padding-right: 30px;
 }
 
 .details-title {
@@ -149,6 +155,7 @@ body {
   cursor: pointer;
   width: 100%;
   padding: 15px;
+  grid-column: 1 / -1;
 }
 
 .add-cart:hover {
